--- a/OpticalValleyUnite/Classes/UI/OffLineWorkOrder/ViewController/YQOffLineFirst.storyboard
+++ b/OpticalValleyUnite/Classes/UI/OffLineWorkOrder/ViewController/YQOffLineFirst.storyboard
@@ -138,10 +138,24 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已完成" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNT-Av-w6o">
+                                                            <rect key="frame" x="213" y="13.5" width="46" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="已保存" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgr-Kk-Exi">
+                                                            <rect key="frame" x="164.5" y="13" width="46" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
+                                                        <constraint firstItem="wNT-Av-w6o" firstAttribute="leading" secondItem="dgr-Kk-Exi" secondAttribute="trailing" constant="3" id="1Gd-Dc-WT7"/>
                                                         <constraint firstItem="fT0-zg-Lb0" firstAttribute="centerY" secondItem="57h-gF-lo2" secondAttribute="centerY" id="8em-dU-gzc"/>
+                                                        <constraint firstItem="dgr-Kk-Exi" firstAttribute="centerX" secondItem="57h-gF-lo2" secondAttribute="centerX" id="AZn-un-tCw"/>
                                                         <constraint firstAttribute="trailing" secondItem="fT0-zg-Lb0" secondAttribute="trailing" constant="12" id="Cz0-ra-76s"/>
                                                         <constraint firstItem="gAu-7W-Hs5" firstAttribute="leading" secondItem="57h-gF-lo2" secondAttribute="leading" constant="12" id="IPl-E0-tF0"/>
                                                         <constraint firstAttribute="trailing" secondItem="yaE-u0-JXR" secondAttribute="trailing" id="NcD-4f-NX7"/>
@@ -149,6 +163,8 @@
                                                         <constraint firstAttribute="bottom" secondItem="yaE-u0-JXR" secondAttribute="bottom" id="hBv-Rn-fHS"/>
                                                         <constraint firstItem="yaE-u0-JXR" firstAttribute="leading" secondItem="57h-gF-lo2" secondAttribute="leading" id="pLa-RU-a8B"/>
                                                         <constraint firstItem="gAu-7W-Hs5" firstAttribute="centerY" secondItem="57h-gF-lo2" secondAttribute="centerY" id="rqC-Q9-aXi"/>
+                                                        <constraint firstItem="dgr-Kk-Exi" firstAttribute="centerY" secondItem="57h-gF-lo2" secondAttribute="centerY" id="wGQ-9v-A65"/>
+                                                        <constraint firstItem="wNT-Av-w6o" firstAttribute="centerY" secondItem="57h-gF-lo2" secondAttribute="centerY" id="xvS-Ce-SxZ"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dEC-Ox-9ZR">
@@ -244,6 +260,8 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.96862745100000003" green="0.97254901959999995" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
+                                            <outlet property="alreadyCompelte" destination="wNT-Av-w6o" id="hK1-b7-76q"/>
+                                            <outlet property="alreadySave" destination="dgr-Kk-Exi" id="Zuu-lJ-oyo"/>
                                             <outlet property="backView" destination="57h-gF-lo2" id="x7P-HY-Bcb"/>
                                             <outlet property="contentLabel" destination="nrj-0i-vOD" id="9wd-hx-iXR"/>
                                             <outlet property="creatLabel" destination="2bD-AY-6eH" id="gJj-4W-6jq"/>
@@ -339,7 +357,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xIy-r0-zgI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1942" y="833"/>
+            <point key="canvasLocation" x="1908" y="728"/>
         </scene>
     </scenes>
     <resources>
