--- a/OpticalValleyUnite/Classes/UI/ReportForm/View/YQWorkHighlightsDetailCell.xib
+++ b/OpticalValleyUnite/Classes/UI/ReportForm/View/YQWorkHighlightsDetailCell.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WorkHighlightsDetailCell" rowHeight="200" id="KGk-i7-Jjw" customClass="YQWorkHighlightsDetailCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="410" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WorkHighlightsDetailCell" rowHeight="285" id="KGk-i7-Jjw" customClass="YQWorkHighlightsDetailCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="574" height="285"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="410" height="199.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="574" height="284.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o99-3V-m1E">
-                        <rect key="frame" x="0.0" y="0.0" width="410" height="30"/>
+                        <rect key="frame" x="0.0" y="0.0" width="574" height="30"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GjO-aG-RWv">
-                                <rect key="frame" x="0.0" y="29" width="410" height="1"/>
+                                <rect key="frame" x="0.0" y="29" width="574" height="1"/>
                                 <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="C4J-JI-63L"/>
@@ -55,47 +55,47 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bah-Vt-Trx">
-                        <rect key="frame" x="0.0" y="30" width="410" height="134.5"/>
+                        <rect key="frame" x="0.0" y="30" width="574" height="219.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ijI-Fp-tzB">
-                                <rect key="frame" x="140" y="5" width="42" height="21"/>
+                                <rect key="frame" x="10" y="5" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="id4-TL-6gZ" customClass="SJTextView">
-                                <rect key="frame" x="140" y="31" width="265" height="96"/>
+                                <rect key="frame" x="10" y="31" width="559" height="60"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="urk-Yz-IgY"/>
+                                </constraints>
                                 <color key="textColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0k9-Qt-Q7C" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                <rect key="frame" x="10" y="5" width="120" height="122"/>
+                                <rect key="frame" x="10" y="91" width="564" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="MKk-O3-TbV"/>
-                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="ijI-Fp-tzB" firstAttribute="top" secondItem="Bah-Vt-Trx" secondAttribute="top" constant="5" id="1Bl-ay-7RK"/>
                             <constraint firstAttribute="trailing" secondItem="id4-TL-6gZ" secondAttribute="trailing" constant="5" id="7Co-ib-uIO"/>
                             <constraint firstItem="id4-TL-6gZ" firstAttribute="top" secondItem="ijI-Fp-tzB" secondAttribute="bottom" constant="5" id="D0j-Po-sIB"/>
-                            <constraint firstAttribute="bottom" secondItem="0k9-Qt-Q7C" secondAttribute="bottom" constant="8" id="K3C-V5-K1D"/>
-                            <constraint firstItem="0k9-Qt-Q7C" firstAttribute="top" secondItem="Bah-Vt-Trx" secondAttribute="top" constant="5" id="eXz-cr-DlA"/>
-                            <constraint firstItem="0k9-Qt-Q7C" firstAttribute="leading" secondItem="Bah-Vt-Trx" secondAttribute="leading" constant="10" id="g93-FQ-Vt2"/>
-                            <constraint firstItem="ijI-Fp-tzB" firstAttribute="top" secondItem="0k9-Qt-Q7C" secondAttribute="top" id="qKs-Tk-QxL"/>
+                            <constraint firstItem="0k9-Qt-Q7C" firstAttribute="leading" secondItem="Bah-Vt-Trx" secondAttribute="leading" constant="10" id="R5L-dP-oEJ"/>
+                            <constraint firstItem="id4-TL-6gZ" firstAttribute="leading" secondItem="Bah-Vt-Trx" secondAttribute="leading" constant="10" id="Xvm-fV-2cC"/>
+                            <constraint firstAttribute="trailing" secondItem="0k9-Qt-Q7C" secondAttribute="trailing" id="cRF-zq-ykL"/>
+                            <constraint firstAttribute="bottom" secondItem="0k9-Qt-Q7C" secondAttribute="bottom" id="fa1-xN-Lyi"/>
                             <constraint firstItem="id4-TL-6gZ" firstAttribute="leading" secondItem="ijI-Fp-tzB" secondAttribute="leading" id="qeM-J5-R4w"/>
-                            <constraint firstItem="ijI-Fp-tzB" firstAttribute="leading" secondItem="0k9-Qt-Q7C" secondAttribute="trailing" constant="10" id="seh-Dh-wki"/>
-                            <constraint firstItem="id4-TL-6gZ" firstAttribute="bottom" secondItem="0k9-Qt-Q7C" secondAttribute="bottom" id="tkf-JB-kqK"/>
+                            <constraint firstItem="0k9-Qt-Q7C" firstAttribute="top" secondItem="id4-TL-6gZ" secondAttribute="bottom" id="wuk-zz-O1T"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="luB-Mw-0k2">
-                        <rect key="frame" x="0.0" y="164.5" width="410" height="35"/>
+                        <rect key="frame" x="0.0" y="249.5" width="574" height="35"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tXC-B7-GXk">
-                                <rect key="frame" x="0.0" y="0.0" width="410" height="1"/>
+                                <rect key="frame" x="0.0" y="0.0" width="574" height="1"/>
                                 <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="Nxp-xR-8Qp"/>
@@ -108,7 +108,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s8u-Hi-Iu1">
-                                <rect key="frame" x="369.5" y="9.5" width="35.5" height="17"/>
+                                <rect key="frame" x="533.5" y="9.5" width="35.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -149,7 +149,7 @@
                 <outlet property="lightspotTitleLabel" destination="ijI-Fp-tzB" id="b4h-lF-GMd"/>
                 <outlet property="workHighlightImage" destination="0k9-Qt-Q7C" id="u2S-hW-W0U"/>
             </connections>
-            <point key="canvasLocation" x="39" y="61"/>
+            <point key="canvasLocation" x="121" y="103.5"/>
         </tableViewCell>
     </objects>
     <resources>
